// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parser > error exit outside conditional 1`] = `
[
  {
    "level": "error",
    "message": "Exit action can only be used in conditionals",
    "span": {
      "end": 4,
      "start": 0,
    },
  },
]
`;

exports[`Parser > error invalid stat actions 1`] = `
[
  {
    "level": "error",
    "message": "Expected stat name",
    "span": {
      "end": 5,
      "start": 5,
    },
  },
  {
    "level": "error",
    "message": "expected amount",
    "span": {
      "end": 28,
      "start": 19,
    },
  },
  {
    "level": "error",
    "message": "Expected operation",
    "span": {
      "end": 38,
      "start": 37,
    },
  },
  {
    "level": "error",
    "message": "expected amount",
    "span": {
      "end": 39,
      "start": 39,
    },
  },
  {
    "level": "error",
    "message": "Expected stat name",
    "span": {
      "end": 44,
      "start": 44,
    },
  },
]
`;

exports[`Parser > error invalid stat names 1`] = `
[
  {
    "level": "error",
    "message": "Stat name exceeds 16-character limit",
    "span": {
      "end": 23,
      "start": 5,
    },
  },
  {
    "level": "error",
    "message": "Stat name cannot be empty",
    "span": {
      "end": 36,
      "start": 34,
    },
  },
  {
    "level": "error",
    "message": "Stat name cannot contain spaces",
    "span": {
      "end": 60,
      "start": 48,
    },
  },
]
`;

exports[`Parser > error nested conditionals 1`] = `
[
  {
    "level": "error",
    "message": "Cannot use a conditional inside of a conditional",
    "span": {
      "end": 15,
      "start": 13,
    },
  },
]
`;

exports[`Parser > error number above integer limit 1`] = `
[
  {
    "level": "error",
    "message": "Number exceeds 64-bit integer limit",
    "span": {
      "end": 40,
      "start": 9,
    },
  },
]
`;

exports[`Parser > parse conditionals 1`] = `
{
  "diagnostics": [],
  "holders": [
    {
      "actions": {
        "span": {
          "end": 171,
          "start": 0,
        },
        "value": [
          {
            "conditions": {
              "span": {
                "end": 4,
                "start": 3,
              },
              "value": [],
            },
            "ifActions": {
              "span": {
                "end": 26,
                "start": 6,
              },
              "value": [
                {
                  "kwSpan": {
                    "end": 17,
                    "start": 13,
                  },
                  "message": {
                    "span": {
                      "end": 24,
                      "start": 18,
                    },
                    "value": "true",
                  },
                  "type": "MESSAGE",
                },
              ],
            },
            "kwSpan": {
              "end": 2,
              "start": 0,
            },
            "type": "CONDITIONAL",
          },
          {
            "amount": {
              "span": {
                "end": 42,
                "start": 40,
              },
              "value": 10n,
            },
            "kwSpan": {
              "end": 35,
              "start": 31,
            },
            "op": {
              "span": {
                "end": 38,
                "start": 38,
              },
              "value": "set",
            },
            "stat": {
              "span": {
                "end": 37,
                "start": 36,
              },
              "value": "x",
            },
            "type": "CHANGE_STAT",
          },
          {
            "conditions": {
              "span": {
                "end": 64,
                "start": 53,
              },
              "value": [
                {
                  "amount": {
                    "span": {
                      "end": 64,
                      "start": 63,
                    },
                    "value": 5n,
                  },
                  "kwSpan": {
                    "end": 58,
                    "start": 54,
                  },
                  "op": {
                    "span": {
                      "end": 61,
                      "start": 61,
                    },
                    "value": "greater_than",
                  },
                  "stat": {
                    "span": {
                      "end": 60,
                      "start": 59,
                    },
                    "value": "x",
                  },
                  "type": "COMPARE_STAT",
                },
              ],
            },
            "elseActions": {
              "span": {
                "end": 114,
                "start": 93,
              },
              "value": [
                {
                  "kwSpan": {
                    "end": 104,
                    "start": 100,
                  },
                  "message": {
                    "span": {
                      "end": 112,
                      "start": 105,
                    },
                    "value": "false",
                  },
                  "type": "MESSAGE",
                },
              ],
            },
            "ifActions": {
              "span": {
                "end": 86,
                "start": 66,
              },
              "value": [
                {
                  "kwSpan": {
                    "end": 77,
                    "start": 73,
                  },
                  "message": {
                    "span": {
                      "end": 84,
                      "start": 78,
                    },
                    "value": "true",
                  },
                  "type": "MESSAGE",
                },
              ],
            },
            "kwSpan": {
              "end": 48,
              "start": 46,
            },
            "matchAny": {
              "span": {
                "end": 52,
                "start": 49,
              },
              "value": true,
            },
            "type": "CONDITIONAL",
          },
          {
            "conditions": {
              "span": {
                "end": 133,
                "start": 122,
              },
              "value": [
                {
                  "amount": {
                    "span": {
                      "end": 133,
                      "start": 132,
                    },
                    "value": 5n,
                  },
                  "kwSpan": {
                    "end": 127,
                    "start": 123,
                  },
                  "op": {
                    "span": {
                      "end": 130,
                      "start": 130,
                    },
                    "value": "less_than",
                  },
                  "stat": {
                    "span": {
                      "end": 129,
                      "start": 128,
                    },
                    "value": "x",
                  },
                  "type": "COMPARE_STAT",
                },
              ],
            },
            "elseActions": {
              "span": {
                "end": 171,
                "start": 156,
              },
              "value": [
                {
                  "kwSpan": {
                    "end": 162,
                    "start": 158,
                  },
                  "message": {
                    "span": {
                      "end": 170,
                      "start": 163,
                    },
                    "value": "false",
                  },
                  "type": "MESSAGE",
                },
              ],
            },
            "ifActions": {
              "span": {
                "end": 149,
                "start": 135,
              },
              "value": [
                {
                  "kwSpan": {
                    "end": 141,
                    "start": 137,
                  },
                  "message": {
                    "span": {
                      "end": 148,
                      "start": 142,
                    },
                    "value": "true",
                  },
                  "type": "MESSAGE",
                },
              ],
            },
            "kwSpan": {
              "end": 121,
              "start": 119,
            },
            "type": "CONDITIONAL",
          },
        ],
      },
      "kwSpan": {
        "end": 0,
        "start": 0,
      },
      "type": "UNKNOWN",
    },
  ],
}
`;

exports[`Parser > parse global stats 1`] = `
{
  "diagnostics": [],
  "holders": [
    {
      "actions": {
        "span": {
          "end": 78,
          "start": 0,
        },
        "value": [
          {
            "amount": {
              "span": {
                "end": 16,
                "start": 15,
              },
              "value": 5n,
            },
            "kwSpan": {
              "end": 10,
              "start": 0,
            },
            "op": {
              "span": {
                "end": 13,
                "start": 13,
              },
              "value": "set",
            },
            "stat": {
              "span": {
                "end": 12,
                "start": 11,
              },
              "value": "x",
            },
            "type": "CHANGE_GLOBAL_STAT",
          },
          {
            "amount": {
              "span": {
                "end": 45,
                "start": 33,
              },
              "value": "%stat.global/x%",
            },
            "kwSpan": {
              "end": 28,
              "start": 18,
            },
            "op": {
              "span": {
                "end": 31,
                "start": 31,
              },
              "value": "set",
            },
            "stat": {
              "span": {
                "end": 30,
                "start": 29,
              },
              "value": "y",
            },
            "type": "CHANGE_GLOBAL_STAT",
          },
          {
            "amount": {
              "span": {
                "end": 78,
                "start": 62,
              },
              "value": "%stat.global/y%",
            },
            "kwSpan": {
              "end": 57,
              "start": 47,
            },
            "op": {
              "span": {
                "end": 60,
                "start": 60,
              },
              "value": "set",
            },
            "stat": {
              "span": {
                "end": 59,
                "start": 58,
              },
              "value": "z",
            },
            "type": "CHANGE_GLOBAL_STAT",
          },
        ],
      },
      "kwSpan": {
        "end": 0,
        "start": 0,
      },
      "type": "UNKNOWN",
    },
  ],
}
`;

exports[`Parser > parse player stats 1`] = `
{
  "diagnostics": [],
  "holders": [
    {
      "actions": {
        "span": {
          "end": 54,
          "start": 0,
        },
        "value": [
          {
            "amount": {
              "span": {
                "end": 10,
                "start": 9,
              },
              "value": 5n,
            },
            "kwSpan": {
              "end": 4,
              "start": 0,
            },
            "op": {
              "span": {
                "end": 7,
                "start": 7,
              },
              "value": "set",
            },
            "stat": {
              "span": {
                "end": 6,
                "start": 5,
              },
              "value": "x",
            },
            "type": "CHANGE_STAT",
          },
          {
            "amount": {
              "span": {
                "end": 27,
                "start": 21,
              },
              "value": "%stat.player/x%",
            },
            "kwSpan": {
              "end": 16,
              "start": 12,
            },
            "op": {
              "span": {
                "end": 19,
                "start": 19,
              },
              "value": "set",
            },
            "stat": {
              "span": {
                "end": 18,
                "start": 17,
              },
              "value": "y",
            },
            "type": "CHANGE_STAT",
          },
          {
            "amount": {
              "span": {
                "end": 54,
                "start": 38,
              },
              "value": "%stat.player/y%",
            },
            "kwSpan": {
              "end": 33,
              "start": 29,
            },
            "op": {
              "span": {
                "end": 36,
                "start": 36,
              },
              "value": "set",
            },
            "stat": {
              "span": {
                "end": 35,
                "start": 34,
              },
              "value": "z",
            },
            "type": "CHANGE_STAT",
          },
        ],
      },
      "kwSpan": {
        "end": 0,
        "start": 0,
      },
      "type": "UNKNOWN",
    },
  ],
}
`;
